cluster/bootstrap/argocd/argocd-unused-components.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: argocd-applicationset-controller
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: argocd-notifications-controller-metrics
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller-network-policy
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-network-policy
